# rust-spike

./: .dockerignore  .env  Cargo.toml  Dockerfile  clippy.toml  docker-compose.yml  recipe.json
.sqlx/: query-2752ebe71f63b8615aaa6c74fbd70502f2dedce92738008891187d9e47325c15.json  query-5f7a1d9b4c442ea6c1bbf8fe4577c23775fb5095cd28c0e378dedf02fca8ddb6.json  query-e83569a45e1318c64d4a2278be60b9d9ed3b882926e4a93d6693c3f1baecedf3.json  query-fe83dbef726722cd8aa5ef08ed92cfa0831588542320b4ab4dc5e3298e860799.json
docker/dynamodb/: shared-local-instance.db
migrations/: 001_add_merchants.sql
src/: dynamo.rs  graphql.rs  main.rs  models.rs  postgres.rs
