[package]
name = "rust_spike"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
async-graphql = "7.2.1"
async-graphql-actix-web = "7.2.1"
bigdecimal = { version = "0.4", features = [ "serde-json" ] }
serde="1.0.228"
serde_json="1.0.149"
strum_macros = "0.27.2"
trpl = "0.3.0"
rand = "0.8.5"
anyhow = "1.0.101"
chrono = "0.4.43"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "migrate", "bigdecimal" ] }
